--- a/config/database.yml
+++ b/config/database.yml
@@ -53,4 +53,10 @@ production:
   username: root
   password: <%= ENV['DATABASE_PASSWORD'] %>
   socket: /var/lib/mysql/mysql.sock
-  
+
+production:
+#半角スペース２個分の空白を開ける
+  <<: *default
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
